# Biodownloader

./: .gitignore  README.md  ena_test.tsv  geo.csv  pyproject.toml  sra_test.csv
.github/workflows/: publish.yml
.testenv/: pyvenv.cfg
biodownloader/: cli.py  geo.py
tests /: test_dummy.py
